# functional_list

./: Cargo.toml  README.md
src/: lib.rs  list.rs
